Added CLIP LF example for visual relation dataset

--- a/visual_relation/visual_relation_tutorial.ipynb
+++ b/visual_relation/visual_relation_tutorial.ipynb
@@ -64,9 +64,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Relationships:  26\n",
-      "Dev Relationships:  26\n",
-      "Test Relationships:  26\n"
+      "Train Relationships:  635\n",
+      "Dev Relationships:  216\n",
+      "Test Relationships:  194\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
     "from utils import load_vrd_data\n",
     "\n",
     "# setting sample=False will take ~3 hours to run (downloads full VRD dataset)\n",
-    "sample = True\n",
+    "sample = False\n",
     "is_test = os.environ.get(\"TRAVIS\") == \"true\" or os.environ.get(\"IS_TEST\") == \"true\"\n",
     "df_train, df_valid, df_test = load_vrd_data(sample, is_test)\n",
     "\n",
@@ -241,40 +241,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/26 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████| 26/26 [00:00<00:00, 2864.43it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "  0%|          | 0/26 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████| 26/26 [00:00<00:00, 4071.08it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 635/635 [00:00<00:00, 5374.90it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 216/216 [00:00<00:00, 10050.47it/s]\n"
      ]
     }
    ],
@@ -337,32 +305,32 @@
        "      <th>lf_ride_object</th>\n",
        "      <td>0</td>\n",
        "      <td>[0]</td>\n",
-       "      <td>0.230769</td>\n",
-       "      <td>0.230769</td>\n",
-       "      <td>0.230769</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.833333</td>\n",
+       "      <td>0.175926</td>\n",
+       "      <td>0.175926</td>\n",
+       "      <td>0.175926</td>\n",
+       "      <td>29</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.763158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lf_carry_object</th>\n",
        "      <td>1</td>\n",
        "      <td>[1]</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>0.076923</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.120370</td>\n",
+       "      <td>0.120370</td>\n",
+       "      <td>0.120370</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.769231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lf_carry_subject</th>\n",
        "      <td>2</td>\n",
        "      <td>[1]</td>\n",
-       "      <td>0.038462</td>\n",
-       "      <td>0.038462</td>\n",
-       "      <td>0.038462</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -370,45 +338,45 @@
        "      <th>lf_not_person</th>\n",
        "      <td>3</td>\n",
        "      <td>[2]</td>\n",
-       "      <td>0.307692</td>\n",
-       "      <td>0.307692</td>\n",
-       "      <td>0.038462</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.625000</td>\n",
+       "      <td>0.212963</td>\n",
+       "      <td>0.203704</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>32</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.695652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lf_ydist</th>\n",
        "      <td>4</td>\n",
        "      <td>[2]</td>\n",
-       "      <td>0.576923</td>\n",
-       "      <td>0.576923</td>\n",
-       "      <td>0.307692</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0.466667</td>\n",
+       "      <td>0.560185</td>\n",
+       "      <td>0.550926</td>\n",
+       "      <td>0.199074</td>\n",
+       "      <td>75</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.619835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lf_dist</th>\n",
        "      <td>5</td>\n",
        "      <td>[2]</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.846154</td>\n",
-       "      <td>0.346154</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>0.962963</td>\n",
+       "      <td>0.768519</td>\n",
+       "      <td>0.337963</td>\n",
+       "      <td>122</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0.586538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>lf_area</th>\n",
        "      <td>6</td>\n",
        "      <td>[2]</td>\n",
-       "      <td>0.346154</td>\n",
-       "      <td>0.346154</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.555556</td>\n",
+       "      <td>0.296296</td>\n",
+       "      <td>0.291667</td>\n",
+       "      <td>0.078704</td>\n",
+       "      <td>48</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.750000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -416,22 +384,22 @@
       ],
       "text/plain": [
        "                  j Polarity  Coverage  Overlaps  Conflicts  Correct  \\\n",
-       "lf_ride_object    0      [0]  0.230769  0.230769   0.230769        5   \n",
-       "lf_carry_object   1      [1]  0.076923  0.076923   0.076923        2   \n",
-       "lf_carry_subject  2      [1]  0.038462  0.038462   0.038462        1   \n",
-       "lf_not_person     3      [2]  0.307692  0.307692   0.038462        5   \n",
-       "lf_ydist          4      [2]  0.576923  0.576923   0.307692        7   \n",
-       "lf_dist           5      [2]  1.000000  0.846154   0.346154       13   \n",
-       "lf_area           6      [2]  0.346154  0.346154   0.153846        5   \n",
+       "lf_ride_object    0      [0]  0.175926  0.175926   0.175926       29   \n",
+       "lf_carry_object   1      [1]  0.120370  0.120370   0.120370       20   \n",
+       "lf_carry_subject  2      [1]  0.041667  0.041667   0.041667        9   \n",
+       "lf_not_person     3      [2]  0.212963  0.203704   0.041667       32   \n",
+       "lf_ydist          4      [2]  0.560185  0.550926   0.199074       75   \n",
+       "lf_dist           5      [2]  0.962963  0.768519   0.337963      122   \n",
+       "lf_area           6      [2]  0.296296  0.291667   0.078704       48   \n",
        "\n",
        "                  Incorrect  Emp. Acc.  \n",
-       "lf_ride_object            1   0.833333  \n",
-       "lf_carry_object           0   1.000000  \n",
+       "lf_ride_object            9   0.763158  \n",
+       "lf_carry_object           6   0.769231  \n",
        "lf_carry_subject          0   1.000000  \n",
-       "lf_not_person             3   0.625000  \n",
-       "lf_ydist                  8   0.466667  \n",
-       "lf_dist                  13   0.500000  \n",
-       "lf_area                   4   0.555556  "
+       "lf_not_person            14   0.695652  \n",
+       "lf_ydist                 46   0.619835  \n",
+       "lf_dist                  86   0.586538  \n",
+       "lf_area                  16   0.750000  "
       ]
      },
      "execution_count": 8,
@@ -458,7 +426,28 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Computing O...\n",
+      "INFO:root:Estimating \\mu...\n",
+      "  0%|                                                                                                                         | 0/100 [00:00<?, ?epoch/s]INFO:root:[0 epochs]: TRAIN:[loss=1.612]\n",
+      "INFO:root:[10 epochs]: TRAIN:[loss=0.425]\n",
+      "INFO:root:[20 epochs]: TRAIN:[loss=0.233]\n",
+      "INFO:root:[30 epochs]: TRAIN:[loss=0.066]\n",
+      " 40%|████████████████████████████████████████████▍                                                                  | 40/100 [00:00<00:00, 399.14epoch/s]INFO:root:[40 epochs]: TRAIN:[loss=0.062]\n",
+      "INFO:root:[50 epochs]: TRAIN:[loss=0.040]\n",
+      "INFO:root:[60 epochs]: TRAIN:[loss=0.030]\n",
+      "INFO:root:[70 epochs]: TRAIN:[loss=0.026]\n",
+      "INFO:root:[80 epochs]: TRAIN:[loss=0.022]\n",
+      "INFO:root:[90 epochs]: TRAIN:[loss=0.020]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 660.88epoch/s]\n",
+      "INFO:root:Finished Training\n"
+     ]
+    }
+   ],
    "source": [
     "from snorkel.labeling.model import LabelModel\n",
     "\n",
@@ -488,7 +477,7 @@
     {
      "data": {
       "text/plain": [
-       "{'f1_micro': 0.5769230769230769}"
+       "{'f1_micro': 0.7037037037037037}"
       ]
      },
      "execution_count": 10,
@@ -519,12 +508,24 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmplup_ss1c\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmplup_ss1c/_remote_module_non_scriptable.py\n"
+     ]
+    }
+   ],
    "source": [
     "from snorkel.classification import DictDataLoader\n",
     "from model import SceneGraphDataset, create_model\n",
     "\n",
     "df_train[\"labels\"] = label_model.predict(L_train)\n",
+    "\n",
+    "# Remove rows where the predicted 'labels' value is ABSTAIN\n",
+    "df_train = df_train[df_train['labels'] != ABSTAIN]\n",
     "\n",
     "if sample:\n",
     "    TRAIN_DIR = \"data/VRD/sg_dataset/samples\"\n",
@@ -555,12 +556,23 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Created task: visual_relation_task\n",
+      "INFO:root:Moving model to GPU (cuda:0).\n",
+      "INFO:root:Created multi-task model MultitaskClassifier that contains task(s) {'visual_relation_task'} from 6 operations (0 shared) and 4 modules (0 shared).\n",
+      "INFO:root:Moving model to GPU (cuda:0).\n"
+     ]
+    }
+   ],
    "source": [
     "import torchvision.models as models\n",
     "\n",
     "# initialize pretrained feature extractor\n",
-    "cnn = models.resnet18(pretrained=True)\n",
+    "cnn = models.resnet18(weights='DEFAULT')\n",
     "model = create_model(cnn)"
    ]
   },
@@ -584,57 +596,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "Epoch 0::   0%|          | 0/2 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/snorkel-tutorials/visual_relation/model.py:135: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  return self.word_embs.loc[word].as_matrix()\n",
-      "\r",
-      "Epoch 0::   0%|          | 0/2 [00:01<?, ?it/s, model/all/train/loss=1.97, model/all/train/lr=0.001]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Epoch 0::  50%|█████     | 1/2 [00:01<00:01,  1.86s/it, model/all/train/loss=1.97, model/all/train/lr=0.001]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Epoch 0::  50%|█████     | 1/2 [00:03<00:01,  1.86s/it, model/all/train/loss=1.93, model/all/train/lr=0.001]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Epoch 0:: 100%|██████████| 2/2 [00:03<00:00,  1.70s/it, model/all/train/loss=1.93, model/all/train/lr=0.001]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "Epoch 0:: 100%|██████████| 2/2 [00:03<00:00,  1.59s/it, model/all/train/loss=1.93, model/all/train/lr=0.001]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "INFO:root:Evaluating every 1.0 epochs.\n",
+      "INFO:root:Using optimizer Adam (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    capturable: False\n",
+      "    differentiable: False\n",
+      "    eps: 1e-08\n",
+      "    foreach: None\n",
+      "    fused: False\n",
+      "    lr: 0.001\n",
+      "    maximize: False\n",
+      "    weight_decay: 0.0\n",
+      ")\n",
+      "INFO:root:Start training...\n",
+      "Epoch 0:: 100%|████████████████████████████████████████████████████| 40/40 [00:20<00:00,  1.96it/s, model/all/train/loss=0.891, model/all/train/lr=0.001]\n"
      ]
     }
    ],
@@ -642,10 +619,10 @@
     "from snorkel.classification import Trainer\n",
     "\n",
     "trainer = Trainer(\n",
+    "    seed=123,\n",
     "    n_epochs=1,  # increase for improved performance\n",
     "    lr=1e-3,\n",
-    "    checkpointing=True,\n",
-    "    checkpointer_config={\"checkpoint_dir\": \"checkpoint\"},\n",
+    "    checkpointing=False,\n",
     ")\n",
     "trainer.fit(model, [dl_train])"
    ]
@@ -658,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "{'visual_relation_task/valid_dataset/valid/f1_micro': 0.34615384615384615}"
+       "{'visual_relation_task/valid_dataset/valid/f1_micro': 0.6712962962962963}"
       ]
      },
      "execution_count": 14,
@@ -686,7 +663,7 @@
    "cell_metadata_filter": "tags,-all"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
