Added clip version of the visual relation and updated the existing one to match the hyper parameters

--- a/visual_relation/visual_relation_tutorial.ipynb
+++ b/visual_relation/visual_relation_tutorial.ipynb
@@ -241,8 +241,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 635/635 [00:00<00:00, 5374.90it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 216/216 [00:00<00:00, 10050.47it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 635/635 [00:00<00:00, 5988.49it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 216/216 [00:00<00:00, 5109.38it/s]\n"
      ]
     }
    ],
@@ -437,13 +437,13 @@
       "INFO:root:[10 epochs]: TRAIN:[loss=0.425]\n",
       "INFO:root:[20 epochs]: TRAIN:[loss=0.233]\n",
       "INFO:root:[30 epochs]: TRAIN:[loss=0.066]\n",
-      " 40%|████████████████████████████████████████████▍                                                                  | 40/100 [00:00<00:00, 399.14epoch/s]INFO:root:[40 epochs]: TRAIN:[loss=0.062]\n",
+      "INFO:root:[40 epochs]: TRAIN:[loss=0.062]\n",
       "INFO:root:[50 epochs]: TRAIN:[loss=0.040]\n",
-      "INFO:root:[60 epochs]: TRAIN:[loss=0.030]\n",
+      " 53%|██████████████████████████████████████████████████████████▊                                                    | 53/100 [00:00<00:00, 528.89epoch/s]INFO:root:[60 epochs]: TRAIN:[loss=0.030]\n",
       "INFO:root:[70 epochs]: TRAIN:[loss=0.026]\n",
       "INFO:root:[80 epochs]: TRAIN:[loss=0.022]\n",
       "INFO:root:[90 epochs]: TRAIN:[loss=0.020]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 660.88epoch/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 651.77epoch/s]\n",
       "INFO:root:Finished Training\n"
      ]
     }
@@ -513,8 +513,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmplup_ss1c\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmplup_ss1c/_remote_module_non_scriptable.py\n"
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmp0_e4snfq\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmp0_e4snfq/_remote_module_non_sriptable.py\n"
      ]
     }
    ],
@@ -572,7 +572,7 @@
     "import torchvision.models as models\n",
     "\n",
     "# initialize pretrained feature extractor\n",
-    "cnn = models.resnet18(weights='DEFAULT')\n",
+    "cnn = models.resnet18(pretrained=True)\n",
     "model = create_model(cnn)"
    ]
   },
@@ -601,17 +601,13 @@
       "Parameter Group 0\n",
       "    amsgrad: False\n",
       "    betas: (0.9, 0.999)\n",
-      "    capturable: False\n",
-      "    differentiable: False\n",
       "    eps: 1e-08\n",
-      "    foreach: None\n",
-      "    fused: False\n",
       "    lr: 0.001\n",
       "    maximize: False\n",
       "    weight_decay: 0.0\n",
       ")\n",
       "INFO:root:Start training...\n",
-      "Epoch 0:: 100%|████████████████████████████████████████████████████| 40/40 [00:20<00:00,  1.96it/s, model/all/train/loss=0.891, model/all/train/lr=0.001]\n"
+      "Epoch 0:: 100%|████████████████████████████████████████████████████| 40/40 [00:25<00:00,  1.57it/s, model/all/train/loss=0.891, model/all/train/lr=0.001]\n"
      ]
     }
    ],
