--- a/visual_relation/visual_relation_with_clip_tutorial.ipynb
+++ b/visual_relation/visual_relation_with_clip_tutorial.ipynb
@@ -232,8 +232,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 635/635 [02:14<00:00,  4.71it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 216/216 [00:46<00:00,  4.68it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 635/635 [02:42<00:00,  3.90it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 216/216 [00:57<00:00,  3.79it/s]\n"
      ]
     }
    ],
@@ -518,7 +518,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 1286.40epoch/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 1466.46epoch/s]\n"
      ]
     }
    ],
@@ -626,7 +626,7 @@
     "import torchvision.models as models\n",
     "\n",
     "# initialize pretrained feature extractor\n",
-    "cnn = models.resnet18(weights='DEFAULT')\n",
+    "cnn = models.resnet18(pretrained=True)\n",
     "model = create_model(cnn)"
    ]
   },
@@ -650,7 +650,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0:: 100%|████████████████████████████████████████████████████| 40/40 [00:20<00:00,  1.97it/s, model/all/train/loss=0.915, model/all/train/lr=0.001]\n"
+      "Epoch 0:: 100%|████████████████████████████████████████████████████| 40/40 [00:20<00:00,  1.92it/s, model/all/train/loss=0.915, model/all/train/lr=0.001]\n"
      ]
     }
    ],
